[package]
name = "yourcat"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
http = "0.2.9"
lambda_http = { version = "0.7.3"}
lambda_runtime = "0.7.3"
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }

[[bin]]
name = "get_image"
path = "src/bin/get_image.rs"

[[bin]]
name = "get_is_cat"
path = "src/bin/get_is_cat.rs"

[[bin]]
name = "post_photo"
path = "src/bin/post_photo.rs"
