[package]
name = "yourcat"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.25.0"
aws-sdk-lambda = "0.25.0"
aws-sdk-rekognition = "0.25.0"
aws-sdk-s3 = "0.25.0"
base64 = "0.21.0"
chrono = "0.4.24"
chrono-tz = "0.8.1"
http = "0.2.9"
image = "0.24.6"
lambda_http = { version = "0.7.3"}
lambda_runtime = "0.7.3"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.3"
serde = "1.0.136"
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
uuid = { version = "1.3.0", features = ["v4"] }

[[bin]]
name = "get_photos"
path = "src/bin/get_photos.rs"

[[bin]]
name = "is_the_cat"
path = "src/bin/is_the_cat.rs"

[[bin]]
name = "post_photo"
path = "src/bin/post_photo.rs"
